[package]
name = "github-pages"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.91"
yew =  { version = "0.21.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.68"
features = [
	"CanvasRenderingContext2d",
	"HtmlCanvasElement"
]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
